Added htmllogo.jpg.png and some text

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
 
     <h2>I'm ready to learn HTML</h2>
     <h3>Fool</h3>
-    <h4>copp
-    </h4>
+    <h4>copp</h4>
+    <h5> Ball</h5>
+    <h6>DOG</h6>
     <p>This is my first web page.</p>
     <section>
         <h3>Naruto Generation</h3>
     <figure>
-        <img src="img/htmllogo.jpg.png" alt="ITACHI LOGO" width="600" height="400" title="I love Washing Animation" loading="lazy">
+        <img src="htmllogo.jpg.png" alt="ITACHI LOGO" width="600" height="400" title="I love Washing Animation" loading="lazy">
         <figcaption>
             Naruto N-Generation Levels
         </figcaption>
