--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section>
         <h3>Naruto Generation</h3>
     <figure>
-        <img src="htmllogo.jpg.png" alt="ITACHI LOGO" width="600" height="400" title="I love Washing Animation" loading="lazy">
+        <img src="html5.png" alt="ITACHI LOGO" width="600" height="400" title="I love Washing Animation" loading="lazy">
         <figcaption>
             Naruto N-Generation Levels
         </figcaption>
