--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Ibraheem Abdulrahman">
     <meta name="description" content="This page contain all the thing I am going to be learning how to create as I learn HTML.">
     <link rel="icon" href="html5.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="main.css" type="text/css">
     <title>My First Web page</title>
         
