added a new image

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </figcaption>
     </figure>
     </section>
+    <img src="Tacos.jpg" alt="tacs" width="600" height="400">
     <section>
 
     <h3>My Daily Schedule</h3>
