--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
              <li>
                 <a href="#Contact">Contact Me</a> 
              </li>
+            <li>
+                Hardworking
+            <li/>
         </ul>
      </nav>
     </header>
